test/1.2/errors/T_EASSIGN_target_type.dml
/*
  © 2021-2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;

// bug 19496. Maybe it should give a new kind of error instead of EASSIGN.
method init {
    /// ERROR EASSIGN
    local void *x;
    *x = *x;

    /// ERROR EASSIGN
    local void (*f)(void);
    *f = *f;
}
